# flexml

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: tests.yml
flexml/: __init__.py  _feature_engineer.py  _model_tuner.py  classification.py  regression.py
flexml/config/: __init__.py  ml_models.py  supervised_config.py
flexml/helpers/: __init__.py  cross_validation.py  plot_model_graphs.py  supervised_helpers.py  tools.py  validators.py
flexml/logger/: __init__.py  logger.py
flexml/structures/: supervised_base.py
notebooks/: classification_experiment.ipynb  regression_experiment.ipynb
tests/: test_classification.py  test_cross_validation.py  test_feature_engineering.py  test_helpers.py  test_ml_models.py  test_performance.py  test_regression.py  test_supervised.py
